css: fix button gap when wrapping on narrow screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,12 @@ pre { background-color: #333; border: 3px solid #555; border-radius: 4px; color:
   border-color: #cccccc;
 }
 
+.btn-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.25em;
+}
+
 .pagination>li>a,
 .pagination>li>span {
   color: #24afc4;
